--- a/myblog/blog/templates/blog/post_list.html
+++ b/myblog/blog/templates/blog/post_list.html
@@ -1,22 +1,12 @@
-{% for post in posts %}
-    <div class="post">
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
-<div class="content container">
-    <div class="row">
-        <div class="col-md-8">
+{% extends 'blog/base.html' %}
+            {% block content %}
             {% for post in posts %}
                 <div class="post">
                     <div class="date">
                         <p>Опубликовано: {{ post.published_date }}</p>
                     </div>
-                    <h1><a href="">{{ post.title }}</a></h1>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
             {% endfor %}
-        </div>
-    </div>
-</div>
+            {% endblock %}
