--- a/myblog/blog/templates/blog/post_edit.html
+++ b/myblog/blog/templates/blog/post_edit.html
@@ -1,12 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>New post</h1>
+    <h1>Новый пост</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+        <button type="submit" class="save btn btn-default">Сохранить</button>
     </form>
 <div>
-    <h4><a href="/">Back</a></h4>
+    <h4><a href="/">Назад</a></h4>
 </div>
 {% endblock %}
